# A-Maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  maze2.txt  note.txt  ouer.py  output_file.txt  pyproject.toml  requierements.txt  test.py
MazeGen/: generator.py
MazeGen/algo/: dijkstras_solver.py  imperfection.py  kruskal_algo.py  save.py
Menu/: menu.py
algo/: generator.py  kruskal.py  kruskal_algo.py  models.py
amazeing_venv/: pyvenv.cfg
mazegen/: README.md  __init__.py  generator.py  kruskal_algo.py  models.py
menu/: menu.py
parsing/: __init__.py  parsing.py
search/: draw_maze.py  draw_maze_k.py  note.txt  test.py
utils/: __init__.py  check_dep.py  create_output_file.py  draw_42.py  draw_maze_file.py  init_maze.py  make_center_42.py  models.py  parsing.py  test.py
