[project]
name = "a-maze-ing"
version = "1.0.0"
description = "Generate random reproductible maze"
authors = [
    {name = "Kheldin, Antoine"}
]
requires-python = "3.14"
dependencies = [
    "mypy (==1.19.1)",
    "pydantic (==2.12.5)",
    "importlib (==1.0.4)",
    "flake8 (==7.3.0)",
    "python-dotenv (==1.2.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
