[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Procedural maze generation and solving library"
readme = "README.md"
requires-python = "==3.14.3"
license = { text = "MIT" }
dependencies = [
    "pydantic==2.12.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]